# compiladores

./: .gitignore  README.md  gen_graph.py
etapa1/: Makefile  extra.c  main.c  scanner.l  tokens.h
etapa1/tests/: create.sh  test.py  test.sh  teste_entradas.txt
etapa2/: Makefile  extra.c  main.c  parser.y  scanner.l
etapa2/tests/: test.py
etapa3/: Cargo.toml  Makefile  build.rs  gen_graph.py  test.txt
etapa3/src/: ast.rs  main.rs  parser.y  rawparser.y  scanner.l
etapa3/tests/: create.sh  test.py  test_etapa1.rs  test_etapa2.rs
etapa3/tests/etapa1/inputs/: err2.txt  lit_float11.txt  mlcom5.txt
etapa3/tests/etapa1/outputs/: err2.txt  id2.txt  lit_char1.txt  lit_char10.txt  lit_char14.txt  lit_char15.txt  lit_char17.txt  lit_char20.txt  lit_char21.txt  lit_char3.txt  lit_char4.txt  lit_char5.txt  lit_char9.txt  lit_float1.txt  lit_float2.txt  lit_float3.txt  lit_float5.txt  lit_float6.txt  lit_float7.txt  lit_float9.txt  lit_int7.txt  mul1.txt  mul2.txt  mul6.txt  mul7.txt
etapa3/tests/etapa2/inputs/: attrib_01.txt  attrib_03.txt  err_08.txt  fun_char.txt  fun_param_bool.txt  global_float.txt  ret_exp_02.txt  ret_exp_09.txt  var_int.txt  var_mult.txt  while.txt
etapa3/tests/etapa2/outputs/: err_07.txt
etapa4/: Cargo.toml  Makefile  test.out  test.txt
etapa4/src/: ast.rs  errors.rs  lib.rs  main.rs  parser.y  (+1 more)
etapa5/: Cargo.toml  Makefile
etapa5/src/: ast.rs  iloc_aux.rs  lib.rs  main.rs  parser.y  semantic_aux.rs
etapa5/tests/: test_etapa4.rs  test_etapa5.rs
etapa6/: Cargo.toml  Makefile
etapa7/: Cargo.toml  Makefile  README.txt  build.rs
(+278 files in other folders)
