[package]
name = "etapa5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
anyhow = "1.0.68"
cfgrammar = "0.13.0"
libc = "0.2.139"
libc-stdhandle = "0.1.0"
lrlex = "0.13.0"
lrpar = "0.13.0"
once_cell = "1.17.0"
thiserror = "1.0.38"

[features]
default = ["lexparser", "semantics", "code"]
onlylex = []
lexparser = []
debug = []
debug-tree = []
semantics = []
code = []


[[test]]
name = "test-etapa1"
path = "tests/test_etapa1.rs"
required-features = ["onlylex"]

[[test]]
name = "test-etapa2"
path = "tests/test_etapa2.rs"
required-features = ["lexparser"]

[[test]]
name = "test-etapa3"
path = "tests/test_etapa3.rs"
required-features = ["lexparser"]

[[test]]
name = "test-etapa4"
path = "tests/test_etapa4.rs"
required-features = ["lexparser", "semantics"]

[[test]]
name = "test-etapa5"
path = "tests/test_etapa5.rs"
required-features = ["lexparser", "semantics"]
